--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Browser Platform Publish
         uses: PlasmoHQ/bpp@v3
         with:
-          keys: ${{ secrets.SUBMIT_KEYS }}
+          keys: ${{ secrets.CHROME_SUBMIT_KEYS }}
           artifact: build/chrome-mv3-prod.zip
