--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,14 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
-  ]
+    "config:base",
+    ":timezone(Asia/Tokyo)"
+  ],
+  "labels": ["dependencies", "renovate"],
+  "dependencyDashboard": true,
+  "schedule": [
+    "after 8am before 5pm on Monday"
+  ],
+  "prHourlyLimit": 0,
+  "prConcurrentLimit": 0
 }
