--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "pnpm generate && plasmo dev",
     "build": "pnpm generate && pnpm lint && plasmo build",
     "package": "pnpm generate && pnpm lint && plasmo package",
-    "lint": "tsc --noEmit --incremental false && eslint src",
+    "lint": "tsc --noEmit && eslint src --max-warnings=0",
     "test": "vitest run",
     "generate": "tcm -p 'src/**/*.module.css'"
   },
