--- a/package.json
+++ b/package.json
@@ -55,5 +55,10 @@
         "strict_min_version": "57.0"
       }
     }
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "react-dom@18.2.0": "patches/react-dom@18.2.0.patch"
+    }
   }
 }
