--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@plasmohq/storage": "1.6.0",
     "plasmo": "0.70.1",
     "react": "18.2.0",
-    "react-colorful": "^5.6.1",
+    "react-colorful": "5.6.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
