--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "pnpm generate && plasmo dev",
     "build": "pnpm generate && pnpm lint && plasmo build",
     "package": "pnpm generate && pnpm lint && plasmo package",
-    "lint": "tsc --noEmit && eslint src --max-warnings=0",
+    "lint": "pnpm run \"/^lint:.*/\"",
+    "lint:ts": "tsc --noEmit",
+    "lint:es": "eslint src --max-warnings=0",
+    "lint:markup": "markuplint \"src/**/*.tsx\"",
     "test": "vitest run",
     "generate": "tcm -p 'src/**/*.module.css'"
   },
@@ -24,6 +27,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@markuplint/jsx-parser": "3.7.0",
+    "@markuplint/react-spec": "3.8.0",
     "@plasmohq/prettier-plugin-sort-imports": "3.6.4",
     "@types/chrome": "0.0.236",
     "@types/node": "18.16.14",
