--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "description": "Prevent incorrect merges on GitHub's pull request.",
   "author": "daku10",
   "scripts": {
-    "dev": "pnpm generate && plasmo dev",
-    "build": "pnpm generate && pnpm lint && plasmo build",
-    "package": "pnpm generate && pnpm lint && plasmo package",
+    "dev:chrome": "pnpm generate && plasmo dev",
+    "dev:firefox": "pnpm generate && plasmo dev --target=firefox-mv2",
+    "build:chrome": "pnpm generate && pnpm lint && plasmo build",
+    "build:firefox": "pnpm generate && pnpm lint && plasmo build --target=firefox-mv2",
+    "package:chrome": "pnpm build:chrome && plasmo package",
+    "package:firefox": "pnpm build:firefox && plasmo package --target=firefox-mv2",
     "lint": "pnpm run \"/^lint:.*/\"",
     "lint:ts": "tsc --noEmit",
     "lint:es": "eslint src --max-warnings=0",
