--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,5 @@ jobs:
           cache: "pnpm"
       - name: Run Test
         run: pnpm test
+      - name: Build for lint
+        run: pnpm build:chrome
