--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev:chrome": "pnpm generate && plasmo dev",
     "dev:firefox": "pnpm generate && plasmo dev --target=firefox-mv2",
-    "build:chrome": "pnpm generate && pnpm lint && plasmo build",
-    "build:firefox": "pnpm generate && pnpm lint && plasmo build --target=firefox-mv2",
+    "build:chrome": "pnpm generate && plasmo build && pnpm lint",
+    "build:firefox": "pnpm generate && plasmo build --target=firefox-mv2 && pnpm lint",
     "package:chrome": "pnpm build:chrome && plasmo package",
     "package:firefox": "pnpm build:firefox && plasmo package --target=firefox-mv2",
     "lint": "pnpm run \"/^lint:.*/\"",
