--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.3.1",
   "description": "Prevent incorrect merges on GitHub's pull request.",
   "author": "daku10",
+  "type": "module",
   "scripts": {
     "dev:chrome": "pnpm generate && plasmo dev",
     "dev:firefox": "pnpm generate && plasmo dev --target=firefox-mv2",
@@ -31,6 +32,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "8.52.0",
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@markuplint/jsx-parser": "3.11.0",
     "@markuplint/react-spec": "3.12.0",
@@ -44,6 +46,7 @@
     "eslint": "8.52.0",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "globals": "13.23.0",
     "markuplint": "3.14.0",
     "postcss": "8.4.31",
     "prettier": "3.0.3",
