--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "generate": "tcm -p 'src/**/*.module.css'",
     "format": "prettier --write src/**/*.{ts,tsx}"
   },
+  "packageManager": "pnpm@8.12.0",
   "dependencies": {
     "@dnd-kit/core": "6.1.0",
     "@dnd-kit/sortable": "8.0.0",
