group markuplint on renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,5 +11,12 @@
     "after 8am before 5pm on Monday"
   ],
   "prHourlyLimit": 0,
-  "prConcurrentLimit": 0
+  "prConcurrentLimit": 0,
+  "packageRules": [
+    {
+      "groupName": "markuplint",
+      "matchPackageNames": ["markuplint"],
+      "matchPackagePrefixes": ["@markuplint"]
+    }
+  ]
 }
