--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "generate": "tcm -p 'src/**/*.module.css'",
     "format": "prettier --write src/**/*.{ts,tsx}"
   },
-  "packageManager": "pnpm@9.12.2",
+  "packageManager": "pnpm@10.6.4+sha512.da3d715bfd22a9a105e6e8088cfc7826699332ded60c423b14ec613a185f1602206702ff0fe4c438cb15c979081ce4cb02568e364b15174503a63c7a8e2a5f6c",
   "dependencies": {
     "@dnd-kit/core": "6.1.0",
     "@dnd-kit/sortable": "8.0.0",
@@ -72,6 +72,14 @@
   "pnpm": {
     "patchedDependencies": {
       "react-dom@18.3.1": "patches/react-dom@18.3.1.patch"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "es5-ext",
+      "esbuild",
+      "lmdb",
+      "msgpackr-extract",
+      "sharp"
+    ]
   }
 }
